tests/fixtures/cmake-build.raw.txt
-- The C compiler identification is GNU 12.2.0
-- The CXX compiler identification is GNU 12.2.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Checking for module 'libcurl'
-- Found libcurl, version 7.88.1
-- Checking for module 'openssl'
-- Found openssl, version 3.0.13
-- Configuring done (1.2s)
-- Generating done (0.1s)
-- Build files have been written to: /home/user/project/build
[  5%] Building CXX object src/CMakeFiles/core.dir/main.cpp.o
[ 10%] Building CXX object src/CMakeFiles/core.dir/utils.cpp.o
[ 15%] Building CXX object src/CMakeFiles/core.dir/parser.cpp.o
/home/user/project/src/parser.cpp:42:10: warning: unused variable 'result' [-Wunused-variable]
   42 |     auto result = parse(input);
      |          ^~~~~~
[ 20%] Building CXX object src/CMakeFiles/core.dir/config.cpp.o
[ 25%] Building CXX object src/CMakeFiles/core.dir/logger.cpp.o
[ 30%] Building CXX object src/CMakeFiles/core.dir/network.cpp.o
[ 35%] Building CXX object src/CMakeFiles/core.dir/crypto.cpp.o
[ 40%] Linking CXX static library libcore.a
[ 40%] Built target core
[ 45%] Building CXX object tests/CMakeFiles/test_runner.dir/test_main.cpp.o
[ 50%] Building CXX object tests/CMakeFiles/test_runner.dir/test_utils.cpp.o
[ 55%] Building CXX object tests/CMakeFiles/test_runner.dir/test_parser.cpp.o
/home/user/project/tests/test_parser.cpp:28:5: error: 'EXPECT_EQ' was not declared in this scope
   28 |     EXPECT_EQ(result, expected);
      |     ^~~~~~~~~
[ 60%] Building CXX object tests/CMakeFiles/test_runner.dir/test_config.cpp.o
[ 65%] Linking CXX executable test_runner
[ 70%] Built target test_runner
[ 75%] Building CXX object tools/CMakeFiles/cli.dir/cli_main.cpp.o
[ 80%] Building CXX object tools/CMakeFiles/cli.dir/cli_parser.cpp.o
[ 85%] Linking CXX executable cli
[ 85%] Built target cli
[ 90%] Building CXX object bench/CMakeFiles/benchmark.dir/bench_main.cpp.o
[ 95%] Linking CXX executable benchmark
[ 95%] Built target benchmark
[100%] Built target all
